# Pb-pos-active

./: .env.example  .gitignore  README.md  pyproject.toml  rdb.py
deploy/: Caddyfile.example  pb-pos.service.example  ubuntu-deploy.sh
docs/: qz-tray-setup.md  silent-kitchen-print.md
inventory/: admin.py  forms.py  models.py  urls.py
inventory/migrations/: 0001_initial.py  0002_rename_category_inventorycategory_and_more.py  0003_alter_inventoryproduct_image.py  0004_inventorycategory_created_at_and_more.py  0005_inventoryitem_purchase_purchaseitem_recipe_and_more.py  0006_recipe_unit_used.py
inventory/views/: __init__.py  adjustments_views.py  categories_views.py  dashboard_views.py  items_views.py  purchases_views.py  recipes.py  reports_views.py  suppliers.py
posapp/: admin.py  context_processors.py  datetime_utils.py  decorators.py  forms.py  middleware.py  models.py  permissions.py  query_utils.py  session_manager.py  signals.py  urls.py  utils.py
posapp/api/: serializers.py  views.py
posapp/migrations/: 0001_initial.py  0002_usersession.py  0003_order_cash_given_order_change_amount.py  0004_product_calculate_price_per_kg.py  0005_alter_orderitem_original_quantity_and_more.py  0006_deliveryperson_order_delivery_person.py  0007_userrole_can_access_kitchen_view_and_more.py  0008_userprofile_can_apply_discount_codes_and_more.py  0009_deliveryperson_commission_percentage.py  0010_rename_category_poscategory_and_more.py  (+9 more)
posproject/: settings.py  urls.py
scripts/: del.py  start-pos-kiosk-print-local.bat  start-pos-kiosk-print.bat  start-pos-kiosk-print.sh
(+96 files in other folders)
